<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <LinearLayout
        android:id="@+id/hud_canvas"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical" />
    <RelativeLayout
        android:id="@+id/hud_power_slider"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/power_stick"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/hud_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="20"
            >
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/throttle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="80dp"
                android:text="@string/hud_throttle_mid"
                />
            <TextView
                android:id="@+id/throttle_kph"
                android:layout_marginTop="-10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#444444"
                android:textSize="20dp"
                android:text="@string/hud_throttle_kph"
                />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/hud_logo_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="33"
                >
            <Button
                android:id="@+id/dot_settings"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:background="@drawable/options_icon_states"
                />
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >
                <TextView
                    android:id="@+id/roll_min"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:textColor="#444444"
                    android:textSize="18dp"
                    android:typeface="monospace"
                    android:text="@string/hud_roll_min"
                    />
                <TextView
                    android:id="@+id/roll"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="42dp"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:layout_marginBottom="4dp"
                    android:text="@string/hud_roll_mid"
                    />
                <TextView
                    android:id="@+id/roll_max"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:textColor="#444444"
                    android:textSize="18dp"
                    android:typeface="monospace"
                    android:text="@string/hud_roll_max"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="-5dp">
                <TextView
                    android:id="@+id/roll_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444444"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:gravity="center"
                    android:text="@string/hud_roll"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_weight="20"
                >
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/connection"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="168dp"
            android:layout_marginLeft="390dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/status"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textColor="#A60000"
                android:textSize="10sp"
                android:text="@string/hud_connection"
                android:textAlignment="textEnd"
                android:gravity="right"
                android:layout_marginBottom="2dp"
                />
            <TextView
                android:id="@+id/ip"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textColor="#444444"
                android:textSize="10sp"
                android:typeface="monospace"
                android:text="@string/ip"
                android:gravity="right"
                android:layout_marginTop="2sp" 
                />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/hud_text_left_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="left|bottom"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/BPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            >
            <TextView
                android:id="@+id/BPS_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                android:typeface="monospace" 
                />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
